Add placeholder components

--- a/package.json
+++ b/package.json
@@ -30,7 +30,12 @@
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
     "svelte": "^3.17.3",
+    "svelte-css-vars": "0.0.1",
+    "svelte-grid": "^4.0.0",
+    "svelte-grid-responsive": "^0.3.0",
     "svelte-lazy": "^1.0.8",
-    "svelte-loading-spinners": "^0.1.4"
+    "svelte-loading-spinners": "^0.1.4",
+    "svelte-masonry": "0.0.17",
+    "waterfall.js": "^1.1.0"
   }
 }
