--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
     "compression": "^1.7.1",
+    "cross-fetch": "^3.0.6",
     "polka": "next",
     "sirv": "^1.0.0",
+    "subscriptions-transport-ws": "^0.9.18",
     "svelte-icons": "^2.1.0"
   },
   "devDependencies": {
+    "@apollo/client": "^3.3.7",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -25,11 +33,15 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "@rollup/plugin-url": "^5.0.0",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^15.4.0",
+    "node-fetch": "^2.6.1",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
     "svelte": "^3.17.3",
+    "svelte-apollo": "^0.4.0",
     "svelte-css-vars": "0.0.1",
     "svelte-grid": "^4.0.0",
     "svelte-grid-responsive": "^0.3.0",
